namespace java com.moseeker.thrift.gen.position.struct
struct HrOperationrecordStruct{
	1: optional double admin_id,
	2: optional double company_id,
	3: optional double app_id,
	4: optional double status_id,
	5: optional i32 operate_tpl_id
}